feat: implement templates (search, mixer, account)

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -2,7 +2,7 @@
   &__container {
     width: 100%;
     min-height: 60px;
-    background-color: var(--color-footer);
+    // background-color: var(--color-bg);
     font-size: 30px;
     text-align: center;
     padding-top: 10px;
