feat: add popular queries

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,8 @@
 :root {
 	--color-bg: #03041A;
   --color-font: #ffffff;
+  --color-accent: #92aff9;
+  --color-accent--lighter: rgba(146, 175, 249, 0.7);
 }
 
 * {
