--- a/src/style.scss
+++ b/src/style.scss
@@ -263,13 +263,13 @@ body{
     }
   }
   // accountPage
-  .account{
+  .account {
     margin: 25px 25%;
     background-image: linear-gradient(65deg, #edb8ff, #6148ff);
     box-shadow: 0 24px 34px 0 rgb(74 58 255 / 5%), 0 9px 24px 0 rgb(0 0 0 / 45%);
     padding: 1px;
     border-radius: 25px;
-    .account__inner{
+    .account__inner {
       padding: 25px;
       border-radius: 25px;
       background: var(--color-bg);
@@ -277,13 +277,26 @@ body{
       flex-direction: column;
       justify-content: center;
       gap: 20px;
-      h3{
+      h3 {
         text-align: center;
         font-size: 1.4rem;
       }
-      .button{
-        span{
+      .button {
+        background-image: linear-gradient(65deg, #edb8ff, #6148ff);
+        span {
           font-size: 1.1rem;
+        }
+      }
+      .button:hover {
+        background-image: linear-gradient(65deg, #f2e1f7, #9c8ef5);
+        span {
+          font-size: 1.15rem;
+        }
+      }
+      .button:active {
+        background-image: linear-gradient(65deg, #e082ff, #4225fb, #4ad9f5);
+        span {
+          font-size: 1rem;
         }
       }
     }
