--- a/src/style/_searchPage.scss
+++ b/src/style/_searchPage.scss
@@ -38,10 +38,11 @@
 .search-list {
   text-align: center;
   margin: 0 40px 0 40px;
+}
 
-  &--error-message {
-    padding-top: 2rem;
-  }
+.search-error-message {
+  padding-top: 2rem;
+  text-align: center;
 }
 
 .flavors-list__item {
@@ -142,68 +143,6 @@
 
 .flavors-count {
   color: var(--color-accent)
-}
-
-.mixes-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-  @media (width <= 900px) {
-    grid-template-columns: 1fr;
-  }
-
-}
-
-.mixes-list__card {
-  display: flex;
-  align-items: center;
-  padding: 20px 20px 0;
-  background-color: #170f3087;
-  box-shadow: 0 5px 40px 0 rgb(0 0 0 / 40%), inset 0 -76px 80px -44px rgb(255 255 255 / 1%), inset -1px -9px 48px 0 rgb(255 255 255 / 6%);
-
-  .mixes-list__card-img {
-    width: 6rem;
-    height: 6rem;
-    border-radius: 25px;
-  }
-
-  .mixes-list__card-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: baseline;
-    flex-grow: 1;
-  }
-
-  .mixes-list__title {
-    padding: 20px;
-  }
-
-  .mixes-list__card-footer {
-    display: flex;
-    flex-grow: 1;
-    padding: 20px;
-    justify-content: space-between;
-    width: 100%;
-
-    .mixes-list__button {
-      width: 150px;
-      color: #ffffff;
-      text-transform: uppercase;
-      border-radius: 1rem;
-
-      &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-      }
-    }
-  }
-}
-
-.mixes-list__rating-container {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
 }
 
 /* .collection-list{
