feat: connect data of mixes and flavors to mixPage

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
 @import "./style/_header.scss";
 @import "./style/_footer.scss";
-@import "pages/mixPage/mixPage.scss";
+@import "./style/mixPage.scss";
 @import './style/searchPage';
 
 
