--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -10,6 +10,11 @@
     gap: 10px;
     text-align: center;
     // background-color: var(--color-bg);
+    a{
+      text-decoration: none;
+      cursor: pointer;
+      color: var(--color-font);
+    }
   }
   &__github,&__rs{
     width: 100%;
