--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import "./style/mixPage.scss";
 @import './style/searchPage';
 @import './style/message';
+@import './style/accountPageAuth';
 
 
 :root {
