refactor: change class names, variable names, move code into separate functions

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,7 +2,7 @@
 @import "./style/_footer.scss";
 @import './style/mainPageTopBlock';
 @import './style/mixesList';
-@import './style/usersMixes';
+@import './style/userMixes';
 @import "./style/mixPage.scss";
 @import './style/searchPage';
 
