--- a/src/style/_userMixes.scss
+++ b/src/style/_userMixes.scss
@@ -12,20 +12,6 @@
   padding: 1rem;
   background: rgba(237,184,255,1);
   background: linear-gradient(148deg, rgba(237,184,255,1) 0%, rgba(0,212,255,1) 100%);
-
-  /* &--sticky {
-    position: sticky;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
-    // gap: 1rem;
-    
-    .user-mixes__nav {
-      margin: 0;
-    }
-  } */
 }
 
 .user-mixes__nav {
@@ -77,15 +63,6 @@
     visibility: visible;
     display: initial;
     height: 100%;
-    animation: show .2s;
-
-    @keyframes show {
-      0% {
-        height: 0;
-      } 100% {
-        height: 100%;
-      }
-    }
   }
 
   &__image {
@@ -95,7 +72,6 @@
 
   &__text {
     flex-grow: 1;
-    
   }
 
   &__expand-image {
@@ -104,7 +80,7 @@
 
     &--reverse {
       transform: rotateX(180deg);
-      transition: 0.3s;
+      // transition: 0.3s;
     }
   }
 
