--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@
 @import './style/searchPage';
 @import './style/message';
 @import './style/accountPageAuth';
+@import './style/edit_page';
 
 
 :root {
