feat: add preferences page

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import './style/mainPageTopBlock';
 @import './style/mixesList';
 @import './style/userMixes';
+@import './style/preferences';
 @import "./style/mixPage.scss";
 @import './style/searchPage';
 
