--- a/src/style/_mixPage.scss
+++ b/src/style/_mixPage.scss
@@ -1,6 +1,7 @@
 .mix-card{
   display: flex;
   justify-content: center;
+  // align-items: center;
   gap: 30px;
   margin: 0 15vw;
   .mix-card__img{
@@ -388,6 +389,8 @@
       position: absolute;
       top: 20px;
       left: 20px;
+      width: 2rem;
+      height: 2rem;
     }
     .popup-flavor__info{
       display: flex;
