feat: add catalog page with brand search

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import "./style/_header.scss";
 @import "./style/_footer.scss";
 @import "./style/mixPage.scss";
+@import './style//catalog';
 @import './style/searchPage';
 @import './style/message';
 @import './style/accountPageAuth';
