feat: add brand suggestion page

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 @import "./style/_footer.scss";
 @import "./style/mixPage.scss";
 @import './style//catalog';
+@import './style/brandSuggest';
 @import './style/searchPage';
 @import './style/message';
 @import './style/accountPageAuth';
