feat: add flavors list when you click on brand name in catalog

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import "./style/mixPage.scss";
 @import './style//catalog';
 @import './style/brandSuggest';
+@import './style/brandPage';
 @import './style/searchPage';
 @import './style/message';
 @import './style/accountPageAuth';
