feat: add a search by flavor name

--- a/src/style/_brandPage.scss
+++ b/src/style/_brandPage.scss
@@ -35,6 +35,10 @@
       > img {
         width: 2rem;
         height: 2rem;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
