--- a/src/style/_brandPage.scss
+++ b/src/style/_brandPage.scss
@@ -8,8 +8,13 @@
 
   &-header {
     display: flex;
+    justify-content: space-between;
     gap: 1rem;
     margin-bottom: 1rem;
+  }
+
+  &__title {
+    flex-grow: 1;
   }
 
   > .brand-page__search {
@@ -50,5 +55,18 @@
       cursor: pointer;
       opacity: 0.8;
     }
+  }
+
+  &__image--add-new {
+    background-color: rgb(8, 214, 26);
+    border-radius: 50%;
+    transition: 0.3s;
+  }
+
+  &__image--added {
+    background-color: rgb(224, 8, 8);
+    border-radius: 50%;
+    transform: rotateZ(45deg);
+    transition: 0.3s;
   }
 }
