refactor: background color on catalog page

--- a/src/style/_brandPage.scss
+++ b/src/style/_brandPage.scss
@@ -1,7 +1,7 @@
 .brand-page {
   position: fixed;
   top: 0;
-  background-color: rgb(15, 7, 56);
+  background-color: var(--color-bg);
   width: 100vw;
   height: 100vh;
   padding: 1rem;
