--- a/src/style/_catalog.scss
+++ b/src/style/_catalog.scss
@@ -1,22 +1,16 @@
 .catalog {
   position: fixed;
   top: 0;
-  background-color: rgb(15, 7, 56);
+  background-color: var(--color-bg);
   width: 100vw;
   height: 100vh;
-  padding: 3.5rem 1rem 1rem;
+  padding: 1rem 1rem;
 
   &-header {
     display: flex;
     align-items: center;
     gap: 1rem;
-    // margin-bottom: 1rem;
-    background: rgb(17,155,232);
-    background: linear-gradient(180deg, rgba(17,155,232,1) 0%, rgba(16,210,103,1) 100%);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    margin-bottom: 1rem;
     padding: 0.2rem;
   }
 
@@ -40,8 +34,6 @@
     width: 2rem;
     height: 2rem;
     background-color: transparent;
-    // background-color: rgb(18, 218, 174);
-    // border-radius: 0.3rem;
 
     &:hover {
       cursor: pointer;
