--- a/src/style/_catalog.scss
+++ b/src/style/_catalog.scss
@@ -31,14 +31,29 @@
   }
 
   &__mixer-image {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     background-color: transparent;
+    position: relative;
 
     &:hover {
       cursor: pointer;
       transform: scale(1.1);
     }
+  }
+
+  &__mixer-number {
+    color: greenyellow;
+    border-radius: 50%;
+    border: 1px solid greenyellow;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: 1rem;
+    text-align: center;
+    vertical-align: baseline;
   }
 
   > .catalog__search {
