--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -41,3 +41,19 @@
   }
 
 }
+
+.header__mixer {
+  position: relative;
+}
+
+.header__mixer-number {
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  left: -0.5rem;
+  bottom: -0.5rem;
+  color: black;
+  background-color: greenyellow;
+  border-radius: 50%;
+  text-align: center;
+}
