feat: implement search for mixes by flavors added to the mixer

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,8 @@
 @import './style/userMixes';
 @import './style/preferences';
 @import "./style/mixPage.scss";
-@import './style//catalog';
+@import './style/catalog';
+@import './style/mixer-now';
 @import './style/brandSuggest';
 @import './style/brandPage';
 @import './style/searchPage';
