--- a/src/style/_mixer-now.scss
+++ b/src/style/_mixer-now.scss
@@ -18,6 +18,9 @@
 
   &__container {
     flex-grow: 1;
+    background-color: var(--list-color-bg);
+    padding: 1rem;
+    border-radius: 1rem;
   }
 
   &__back-button {
@@ -57,6 +60,10 @@
 
   &__flavor-name {
     display: block;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    color: var(--color-accent);
   }
 
   &__flavor-brand {
@@ -117,4 +124,21 @@
   text-align: center;
   display: block;
   margin-bottom: 1rem;
+  font-weight: bold;
+}
+
+.result__list {
+  margin-bottom: 1rem;
+}
+
+.result__reset-btn {
+  width: 100%;
+  padding: 0.7rem;
+  border-radius: 0.7rem;
+  background-color: greenyellow;
+
+  &:hover {
+    opacity: 0.8;
+    cursor: pointer;
+  }
 }
