--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   &__container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
     width: 100%;
@@ -9,18 +9,24 @@
     padding: 14px;
     gap: 10px;
     text-align: center;
-    // background-color: var(--color-bg);
-    a{
+
+    a {
       text-decoration: none;
       cursor: pointer;
       color: var(--color-font);
     }
   }
-  &__github,&__rs{
-    width: 100%;
+
+  &__github {
     display: flex;
     align-items: center;
     gap: 10px;
-    justify-content: center;
+  }
+
+  &__mixer-image {
+    width: 4rem;
+    height: 4rem;
+    background-color: transparent;
+    background-size: cover;
   }
 }
