--- a/src/style/_mixesList.scss
+++ b/src/style/_mixesList.scss
@@ -1,6 +1,8 @@
 .mixes-list {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  // flex-grow: 0;
+  // grid-row: ;
 
   @media (width <= 900px) {
     grid-template-columns: 1fr;
@@ -14,6 +16,7 @@
   padding: 20px 20px 0;
   background-color: #170f3087;
   box-shadow: 0 5px 40px 0 rgb(0 0 0 / 40%), inset 0 -76px 80px -44px rgb(255 255 255 / 1%), inset -1px -9px 48px 0 rgb(255 255 255 / 6%);
+  // max-height: 10rem;
 
   .mixes-list__card-img {
     width: 6rem;
