--- a/src/style/_searchPage.scss
+++ b/src/style/_searchPage.scss
@@ -1,7 +1,7 @@
 .search {
   height: 60px;
   border-radius: 100px;
-  background-color: hsla(0, 0%, 100%, 0.06);
+  background-color: var(--list-color-bg);
   padding: 0 1rem;
   margin: 0 40px;
   -webkit-transition: color 350ms ease, background-color 350ms ease;
