--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -28,5 +28,23 @@
     height: 4rem;
     background-color: transparent;
     background-size: cover;
+    position: relative;
+
+    &:hover {
+      opacity: 0.8;
+      cursor: pointer;
+    }
+  }
+
+  &__mixer-number {
+    width: 1rem;
+    height: 1rem;
+    position: absolute;
+    left: -0.5rem;
+    bottom: -0.5rem;
+    color: black;
+    background-color: greenyellow;
+    border-radius: 50%;
+    text-align: center;
   }
 }
