--- a/src/style/_userMixes.scss
+++ b/src/style/_userMixes.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   overflow-y: scroll;
   z-index: 3;
 }
@@ -34,8 +34,6 @@
     transform: scale(1.1);
   }
 }
-
-.user-mixes__heading {}
 
 .selector-container {
   display: grid;
