feat: add flavor addition page

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@
 @import './style/preferences';
 @import "./style/mixPage.scss";
 @import './style/catalog';
+@import './style/flavorSuggest';
 @import './style/mixer-now';
 @import './style/brandSuggest';
 @import './style/brandPage';
