implement comlitationPage and listcomplitataionPage

--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,9 @@
 @import './style/edit_page';
 @import './style/preloader';
 @import './style/results';
+@import './style/mainPageComplitations';
+@import './style/complitationPage';
+@import './style/listComplitationPage';
 
 :root {
 	--color-bg: #03041A;
