--- a/src/style/_catalog.scss
+++ b/src/style/_catalog.scss
@@ -1,11 +1,17 @@
 .catalog {
   position: fixed;
   top: 0;
+  left: 0;
   background-color: var(--color-bg);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 1rem 1rem;
   z-index: 2;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &-header {
     display: flex;
