--- a/src/style/_mixesList.scss
+++ b/src/style/_mixesList.scss
@@ -22,6 +22,10 @@
     width: 6rem;
     height: 6rem;
     border-radius: 25px;
+
+    @media (width < 426px) {
+      display: none;
+    }
   }
 
   .mixes-list__card-container {
@@ -30,10 +34,18 @@
     justify-content: space-between;
     align-items: baseline;
     flex-grow: 1;
+
+    @media (width < 426px) {
+      align-items: center;
+    }
   }
 
   .mixes-list__title {
     padding: 20px;
+
+    @media (width < 486px) {
+      padding: 5px;
+    }
   }
 
   .mixes-list__card-footer {
@@ -43,6 +55,16 @@
     justify-content: space-between;
     width: 100%;
 
+    @media (width < 486px) {
+      flex-direction: column;
+      gap: 5px;
+      padding: 5px;
+    }
+
+    @media (width < 426px) {
+      align-items: center;
+    }
+
     .mixes-list__button {
       width: 150px;
       color: #ffffff;
@@ -50,6 +72,8 @@
       border-radius: 1rem;
       background-image: linear-gradient(65deg, #edb8ff, #6148ff);
       box-shadow: 0 24px 34px 0 rgb(74 58 255 / 5%), 0 9px 24px 0 rgb(0 0 0 / 45%);
+      margin-right: 1rem;
+      height: 2rem;
 
       &:hover {
         cursor: pointer;
