--- a/src/style/_preferences.scss
+++ b/src/style/_preferences.scss
@@ -2,7 +2,7 @@
   background-color: rgb(0, 0, 30);
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 2;
   &__header {
@@ -24,7 +24,9 @@
     margin: 0 auto;
   }
 
-  &__flavor-title {
+  &__flavor-title,
+  &__strength-title,
+  &__brands-title {
     margin-bottom: 1rem;
   }
 
@@ -33,6 +35,7 @@
     justify-content: center;
     gap: 1rem;
     list-style: none;
+    flex-wrap: wrap;
   }
 
   &__button {
