feat: connect complication brands

--- a/src/style/_complitationPage.scss
+++ b/src/style/_complitationPage.scss
@@ -1,7 +1,19 @@
-.header-brusko {
-  background-image: url(assets/images/complitation/brusko.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+$brands-name: (
+  brusko: brusko,
+  musthave: musthave,
+  darkside: darkside,
+  chabacco: chabacco,
+  burn: burn
+);
+
+@each $name,
+$img in $brands-name {
+
+  .header-#{$name} {
+    background-image: url(assets/images/complitation/#{$img}.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
 
 .container-complitation {
@@ -26,10 +38,11 @@
   .mixes-list__card {
     box-shadow: none;
     border-radius: 5px;
-    .mixes-list__button{
+
+    .mixes-list__button {
       background-color: #7759f3;
       background-image: none;
     }
   }
-  
+
 }
