--- a/src/style/_listComplitationPage.scss
+++ b/src/style/_listComplitationPage.scss
@@ -4,8 +4,13 @@
     font-size: 2rem;
   }
 }
-.complitation-list-brands{
-  .complitation-list__items{
+
+.complitation-list-brands {
+  .complitation-list__items {
     flex-direction: column;
+  }
+
+  .complitation-name {
+    font-size: 1.4rem;
   }
 }
