feat: add and connect popular mixes

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,6 +18,7 @@
 @import './style/mainPageComplitations';
 @import './style/complitationPage';
 @import './style/listComplitationPage';
+@import './style/mainPagePopularMixes';
 
 :root {
 	--color-bg: #03041A;
