--- a/src/style/_mainPageComplitations.scss
+++ b/src/style/_mainPageComplitations.scss
@@ -24,16 +24,22 @@
   @each $name,
   $img in $brands-name {
 
-    &__item.item-#{$name} {
-      background-image: url(assets/images/complitation/#{$img}.jpg);
-      border-radius: 10px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      padding: 20px 30px;
-      height: 180px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+    &__item{
+        border-radius: 10px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 20px 30px;
+        height: 180px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-image: linear-gradient(to right top, #032c6a, #082354, #0a1b40, #0a122c, #03041a);
+      &.item-#{$name} {
+        background-image: url(assets/images/complitation/#{$img}.jpg);
+        
+      }
     }
+    
+    
   }
 }
