fix: add style to element (more)

--- a/src/style/_mainPageComplitations.scss
+++ b/src/style/_mainPageComplitations.scss
@@ -38,8 +38,9 @@
         background-image: url(assets/images/complitation/#{$img}.jpg);
         
       }
-    }
-    
-    
+    } 
+  }
+  .more{
+    cursor: pointer;
   }
 }
